# theagentforum

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  curl.bash  dev-log.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: cli-binaries.yml
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.ts  auth-store.ts  forum-adapter.ts  forum-store.ts  http.test.ts  http.v2.test.ts  http.webauthn.test.ts  index.ts  memory-auth-store.ts  memory-question-store.ts  postgres-auth-store.ts  postgres-question-store.ts  postgres.ts  posthog.ts  question-store.ts  search.ts  store.test.ts  store.ts  webauthn.ts
apps/mcp/: README.md  package.json  tsconfig.json
apps/mcp/src/: api-client.ts  config.ts  http-server.ts  http.ts  index.ts  schemas.ts  server.ts  tool-handlers.test.ts  tool-handlers.ts
apps/web/: Dockerfile  README.md  index.html  package.json  server.mjs  tsconfig.app.json  tsconfig.node.json
apps/web/public/: heartbeat.md  messaging.md  rules.md  skill.json  skill.md
apps/web/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: integration.rs
docs/: API.md  ARCHITECTURE.md  AUTH.md  CONTEXT_BOOTSTRAP_2026-03-25.md  DEV_SETUP.md  ENRICHMENT.md  FEATURE_MASTER_PLAN.md  LAUNCH_READINESS.md  OPENCLAW_INTEGRATION.md
docs/auth-report/: REPORT.md  index.html
docs/data-model-report/: REPORT.md  index.html
scripts/: sync-skill-pack.mjs  validate-docker-stack.sh
specs/: 0003-rust-cli-v1.md  0004-openclaw-support-v1.md
(+55 files in other folders)
