[package]
name = "taf"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tokio = { version = "1.50.0", features = ["rt", "macros"] }
wiremock = "0.6.5"
